--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+**/src/test/
 
 ### STS ###
 .apt_generated
@@ -31,3 +32,8 @@ build/
 
 ### VS Code ###
 .vscode/
+
+### mvn
+.mvn
+mvnw
+mvnw.cmd
